# rediscover

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  modal_app.py  pyproject.toml
.claude/agents/: claude-researcher.md  gemini-researcher.md  perplexity-researcher.md  researcher.md
.claude/workflows/: conduct-research.md  four-tier-scrape.md
docs/: DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/analysis/: diversity-analysis.md  karpathy-comparison-and-options.md  phase-4-detailed-postmortem.md  phase-4-results.md  phase-4-summary.md  phase-4-validation.md
docs/design-docs/: core-beliefs.md  full-paper-retrieval.md  index.md  model-selection-strategy.md  retrodiction-validation.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: index.md
docs/references/: architecture-breakthroughs.md  arxiv-api-guide.md  autoresearch-analysis.md  cloud-gpu-options.md  hardware-constraints.md  model-cutoff-dates.md  prior-art.md
experiments/: experiment_log.md  prepare.py  program.md  results.tsv  train.py
scripts/: ingest_older_papers.py  ingest_papers.py
src/app/: guards.py  loop.py
src/providers/: __init__.py  arxiv.py  git.py  llm.py  runner.py
src/types/: __init__.py
src/utils/: code_splicing.py  costs.py
tests/: conftest.py
tests/architecture/: conftest.py  test_conventions.py  test_imports.py
tests/unit/: test_code_splicing.py  test_code_validation.py  test_costs.py  test_council.py  test_git_provider.py  test_guards.py  test_literature.py  test_llm_provider.py  (+5 more)
(+32 files in other folders)
